--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Stella Crop Circle.png" alt="Stella twitter picture"></td>
+      <td><img src="Images/Stella Crop Circle.png" alt="Stella's pic"></td>
       <td><h1>Stella Munson</h1>
       <p><em>Student at <Strong><a href="https://www.udemy.com/">Udemy</a></Strong> for Software Engineering.</em></p>
       <p>My name is Stella, I have a BS degree in Biochemistry and have had 7 years of wet lab experience. I've recently decided to switch my career to become a Software Engineer.</p></td>
