--- a/contact me.html
+++ b/contact me.html
@@ -10,7 +10,7 @@
     <p>Fictional Email:Example@gmail.com</p>
     <p>Fictional Phone:123-456-7890</p>
 <hr>
-    <form action="mailto:sftamesis13@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:example@email.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label for="">Your Email:</label>
